--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h2{
 p{
 	font-size: 24px;
 	padding-top: 10px;
-	padding-top: 10px;
+	padding-left: 10px;
 }
 
 img{
@@ -75,7 +75,7 @@ div.yellow{
 	background-color: #ffff00;
 	text-align: right;
 	margin-left: 50px;
-	border-width: 2px 0px 0px 5px;
+	border-width: 0px 2px 0px 5px;
 	
 }
 
@@ -101,7 +101,7 @@ footer > p {
 	font-size: 20px;
 	text-align: right;
 	padding-top: 15px;
-	padding-left: 15px;
+	padding-bottom: 15px;
 	padding-right: 15px;
 }
 
