--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ footer > p {
 	font-size: 20px;
 	text-align: right;
 	padding-top: 15px;
-	padding-bottom: 15px;
 	padding-right: 15px;
+	padding-bottom: 15px;
+	padding-left: 0px;
 }
